# mandelbrot

./: CMakeLists.txt  main.cu
